--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Your Name</title>
+<title>Chengmin Xu</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -325,17 +325,17 @@ $(document).ready(function () {
 
 <p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="welcome-i-am-chengmin-xu." class="section level1">
+<h1>Welcome! I am Chengmin Xu.</h1>
 <p></br></p>
-<div id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip." class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to tip.</h5>
+<div id="i-like-dancing." class="section level5">
+<h5>I like dancing.</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses." class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
+<div id="i-enjoy-eating." class="section level5">
+<h5>I enjoy eating.</h5>
 </div>
-<div id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees." class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced degrees.</h5>
+<div id="i-do-not-like-green." class="section level5">
+<h5>I do not like green.</h5>
 </div>
 <div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
 <h5>I don’t have any data-related projects either, but if I did you could find them <a href="/portfolio">here</a>!</h5>
